2002-08-19  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (_wrap_gtk_dialog_new_with_buttons): ref the
	widget after constructing it.

	* codegen/codegen.py
	(GObjectWrapper.get_initial_constructor_substdict): add special
	case code to ref() GtkWindow instances in their constructor, as we
	don't own the initial reference (it is managed internally by
	gtk+).  This fixes bug #90213.

2002-08-18  James Henstridge  <james@daa.com.au>

	* pygtk.spec.in: update spec file.

	* gtk/Makefile.am: same here.

	* Makefile.am: install in a gtk-2.0 subdir of site-packages.

	* pygtk.py: new file to help with pygtk version parallel install.

	* gobjectmodule.c (pyg_object_set_property): unref object_wrapper.
	(pyg_object_get_property): unref object_wrapper.  (from patch by
	Arjan Molenaar on bug #71021).

	* gtk/gtk.defs (TreeView.set_cursor): allow column to be None
	(fixes bug #91043).

	* codegen/argtypes.py (ObjectArg.write_return): fix up generated
	code.

	* gtk/gtk.override (_wrap_gtk_clist_new_with_titles): don't need
	to manually sink.
	(_wrap_gtk_tree_view_column_new): same here.
	(_wrap_gtk_button_new): same here.
	(_wrap_gtk_toggle_button_new): same here.
	(_wrap_gtk_check_button_new): same here.
	(_wrap_gtk_radio_button_new): same here.
	(_wrap_gtk_list_item_new): same here.
	(_wrap_gtk_menu_item_new): same here.
	(_wrap_gtk_check_menu_item_new): same here.
	(_wrap_gtk_radio_menu_item_new): same here.
	(_wrap_gtk_image_menu_item_new): same here.
	(_wrap_gtk_ctree_new_with_titles): same here.
	(_wrap_gtk_dialog_new_with_buttons): same here.
	(_wrap_gtk_message_dialog_new): same here.
	(_wrap_gtk_progress_bar_new_with_adjustment): same here.

	* gtk/gtkmodule.c (sink_gtkobject): function to sink a GtkObject
	if it is floating.
	(init_gtk): register sink_gtkobject for sinking GtkObjects.

	* codegen/codegen.py
	(GObjectWrapper.get_initial_constructor_substdict): get rid of
	gtkobjectsink bit of code.
