@@ -1,7 +1,12 @@
 2002-08-19  James Henstridge  <james@daa.com.au>
 
+	* codegen/codegen.py
+	(GObjectWrapper.get_initial_constructor_substdict): fix small
+	typo.
+
 	* gtk/gtk.override (_wrap_gtk_dialog_new_with_buttons): ref the
 	widget after constructing it.
+	(_wrap_gtk_message_dialog_new): same here.
 
 	* codegen/codegen.py
 	(GObjectWrapper.get_initial_constructor_substdict): add special
